[gd_scene load_steps=11 format=2]

[ext_resource path="res://HUD/HUD.gd" type="Script" id=1]
[ext_resource path="res://Assets/UI/HeartUIEmpty.png" type="Texture" id=2]
[ext_resource path="res://Assets/Fonts/MinecraftTen-VGORe.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Assets/UI/HeartUIFull.png" type="Texture" id=4]

[sub_resource type="DynamicFont" id=1]
size = 128
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 72
extra_spacing_top = 16
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 128
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 32
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=5]
size = 32
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=6]
size = 20
font_data = ExtResource( 3 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="GameOver" type="Label" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -320.0
margin_right = 512.0
margin_bottom = 320.0
custom_fonts/font = SubResource( 1 )
text = "Game Over"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResetButton" type="Button" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.74
anchor_right = 0.5
anchor_bottom = 0.74
margin_left = -216.0
margin_top = -56.0
margin_right = 224.0
margin_bottom = 64.0
custom_fonts/font = SubResource( 2 )
text = "Restart"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Winner" type="Label" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -271.0
margin_top = -64.0
margin_right = 271.0
margin_bottom = 64.0
custom_fonts/font = SubResource( 3 )
text = "You won!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Health" type="Control" parent="."]
anchor_left = 0.035
anchor_top = 0.034
anchor_right = 0.035
anchor_bottom = 0.034
margin_left = 0.32
margin_top = -0.0500031
margin_right = 96.32
margin_bottom = 19.95
rect_scale = Vector2( 2.25, 2.25 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HeartUIEmpty" type="TextureRect" parent="Health"]
margin_right = 60.0
margin_bottom = 11.0
texture = ExtResource( 2 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HeartUIFull" type="TextureRect" parent="Health"]
margin_right = 60.0
margin_bottom = 11.0
texture = ExtResource( 4 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Container" type="Control" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -464.0
margin_bottom = 200.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreLabel" type="Label" parent="Container"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -296.0
margin_top = 8.0
margin_bottom = 80.0
custom_fonts/font = SubResource( 4 )
text = "Score:0"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FishCounter" type="Label" parent="Container"]
anchor_left = 1.0
anchor_top = 0.28
anchor_right = 1.0
anchor_bottom = 0.28
margin_left = -296.0
margin_bottom = 64.0
custom_fonts/font = SubResource( 5 )
text = "Fish: 100"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GodMode" type="Label" parent="."]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = -90.0
margin_top = 10.0
margin_right = 90.0
margin_bottom = 20.0
custom_fonts/font = SubResource( 6 )
text = "God Mode Enabled"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="ResetButton" to="." method="_on_ResetButton_pressed"]
